2003-08-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* tetris.cpp: 
	* scoreframe.cpp (ScoreFrame): GConf return value checks.

2003-07-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnome-canvas-pimage.c: Removed dead code, gets rid of warnings.

2003-07-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnometris.desktop.in: Update name to fit HIG (bug 116916).

2003-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnometris.schemas.in: Remove full-stop at the end of the short
	description and add descriptions for line_fill_* .

2003-06-20  William Jon McCann  <mccann@jhu.edu>

	* gnome-canvas-pimage.c (gnome_canvas_pimage_draw): Convert to
	pixbufs.  This will allow us to support block images with an
	alpha layer.
	(dist_to_mask): Perform some checks for NULL images.

	* tetris.cpp (setupPixmap): Removed unused pix pixmap.

	* preview.cpp (paint): Use pixbuf for preview.

	* tetris.cpp (setupPixmap): Argh, fixed my typo.
	(setupPixmap): Don't leak fullpixname.

2003-06-19  William Jon McCann  <mccann@jhu.edu>

	* tetris.cpp: #define all the gconf keys for convenience.
	(setupPixmap):
	(gameProperties): Use g_build_filename.

	* scoreframe.cpp (ScoreFrame): Convert to gconf.

2003-06-17  William Jon McCann  <mccann@jhu.edu>

	* gnome-canvas-pimage.c: Removed unused vars.

2003-06-10  William Jon McCann  <mccann@jhu.edu>

	* tetris.cpp: 
	* scoreframe.cpp: Replaced frames with GamesFrames.

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* tetris.cpp: Removed separator from dialogs as in HIG.

2003-06-08  William Jon McCann  <mccann@jhu.edu>

	* tetris.cpp (endOfGame): Hide paused message before
	displaying end of game message.
	(setupScoreState): Make score menu item insensitive if
	scores are not available.
	(gameProperties): HIG fixes for preferences
	dialog.
	
	* scoreframe.cpp (ScoreFrame): HIG fixes for score frame.

2003-06-05  William Jon McCann  <mccann@jhu.edu>

	* tetris.cpp (Tetris): Don't exit if schemas are not installed,